# FidelityFX-ParallelSort

./: .gitlab-ci.yml  README.md
ffx-parallelsort/: FFX_ParallelSort.h
sample/: CMakeLists.txt
sample/src/Common/: FFXParallelSort.json
sample/src/Common/shaders/: ParallelSortCS.hlsl  ParallelSortVerify.hlsl
sample/src/DX12/: CMakeLists.txt  ParallelSort.cpp  ParallelSort.h  UI.cpp  UI.h  renderer.cpp  renderer.h  sample.cpp  sample.h  samplerenderer.cpp  samplerenderer.h  stdafx.cpp  stdafx.h
sample/src/DX12/shaders/: ParallelSortCS.hlsl  ParallelSortVerify.hlsl
sample/src/VK/: CMakeLists.txt  ParallelSort.cpp  ParallelSort.h  UI.cpp  UI.h  dpiawarescaling.manifest  renderer.cpp  renderer.h  sample.cpp  sample.h  stdafx.cpp  stdafx.h
